--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "it-news",
+  "homepage": "https://nikitapil.github.io/it-news/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,6 +12,7 @@
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "axios": "^0.27.2",
+    "gh-pages": "^4.0.0",
     "node-sass": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -27,7 +29,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "test:cover": "react-scripts test --coverage src"
+    "test:cover": "react-scripts test --coverage src",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
